tests/NormalTests/paczka1/small_fuzzy/30979635.err
Error in line 6: 1HnQe2TI2M S798 57,80
Error in line 9: moOI1T6 A218 66,6
